Add handler: Find Sessions
